[package]
name = "imageformat"
version = "0.1.6"
edition = "2021"
description = "Quick probing of image format without loading the entire file."
categories = ["multimedia", "multimedia::images"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["image", "metadata", "format"]
homepage = "https://github.com/AllenDang/imageformat"
repository = "https://github.com/AllenDang/imageformat"
exclude = ["/.github", ".gitignore"]
rust-version = "1.83.0"

[lib]
name = "imageformat"
edition = "2021"

[dependencies]
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
